# algorithm

./: .gitignore  CMakeLists.txt  README
tuto_list/: List.md
tuto_list/note/: list__node.md  loop.md  pointer.md
tuto_list/repo/img/: list_structure.drawio
tuto_list/repo/ref/: 单链表参考代码.rar
tuto_list/repo/ref/单链表参考代码/: linklist.c  linklist.h  test_linklist.c
tuto_list/tuto_list_normal/: NormalList.md  list_normal.c  list_normal.h  main_list_normal.c
tuto_stack/: Stack.md  main_permutate.c
tuto_stack/stack_list/: ListStack.md  stack_list.c  stack_list.h
tuto_stack/stack_sq/: main_stack_sq.c  stack_sq.c  stack_sq.h
